# terminal_sync

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  config_template.yaml  docker-compose.yaml  index.html  logging_config.yaml  mkdocs.yml  pyproject.toml  requirements.txt  search.html  sitemap.xml  terminal_sync.psm1  terminal_sync.sh  terminal_sync_zsh.sh
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: codeql.yml  documentation.yml
architecture/: index.html
developer_guide/: index.html
docs/: architecture.md  developer_guide.md  index.md  quickstart.md  setup.md  style_guide.md  troubleshooting.md  updating.md  usage.md
quickstart/: index.html
search/: search_index.json
setup/: index.html
src/terminal_sync/: __init__.py  __main__.py  api.py  cli.py  config.py  config_template.yaml  export_csv.py  ghostwriter.py  log_entry.py
src/terminal_sync/plugins/: _description.py  _manual_update.py  _nolog.py  proxychains.py
style_guide/: index.html
tests/: conftest.py  manual_test_plan.md  test_config.py  test_ghostwriter.py  test_log_entry.py  test_plugins_description.py  test_plugins_manual_update.py  test_plugins_nolog.py  test_plugins_proxychains.py
troubleshooting/: index.html
updating/: index.html
usage/: index.html
