[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "terminal_sync"
version = "0.1.0"
description = "A standalone tool for logging shell commands to GhostWriter automatically"
authors = [{ name = "breakid" }]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "aiohttp>=3.8.4",
  "gql>=3.4.0",
  "pyyaml>=6.0",
  "fastapi>=0.95.0",
  "uvicorn>=0.21.1",
  "python-dotenv>=1.0.0",
]

[tool.pdm]

[tool.pdm.dev-dependencies]
dev = ["pytest>=7.3.0"]

[tool.pdm.scripts]
code = "code terminal_sync.code-workspace"
serve = "uvicorn api:app --reload"
test = "pytest"
